syntax = "proto3";
package x.nodes;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/pokt-network/pocket-core/x/nodes/types";

message ProtoValidator {
	option (gogoproto.equal) = true;
	option (gogoproto.goproto_stringer) = true;
	option (gogoproto.goproto_getters) = false;

	bytes Address = 1 [(gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address", (gogoproto.moretags) = "yaml:\"address\"", (gogoproto.jsontag) = "address"];
	bytes PublicKey = 2 [(gogoproto.moretags) = "yaml:\"public_key\"", (gogoproto.jsontag) = "public_key"];
	bool jailed = 3 [(gogoproto.jsontag) = "jailed"];
	int32 status = 4 [(gogoproto.jsontag) = "status"];
	repeated string Chains = 5 [(gogoproto.jsontag) = "chains"];
	string ServiceURL = 6 [(gogoproto.jsontag) = "service_url"];
	string StakedTokens = 7 [(gogoproto.customtype) = "github.com/pokt-network/pocket-core/types.BigInt", (gogoproto.jsontag) = "tokens", (gogoproto.nullable) = false];
	google.protobuf.Timestamp UnstakingCompletionTime = 8 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true, (gogoproto.jsontag) = "unstaking_time", (gogoproto.moretags) = "yaml:\"unstaking_time\""];
}

// ValidatorSigningInfo defines the signing info for a validator
message ValidatorSigningInfo {
	option (gogoproto.equal) = true;
	option (gogoproto.goproto_stringer) = false;

	bytes address = 1 [(gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address", // validator consensus address
					  (gogoproto.jsontag) = "address"];
	// height at which validator was first a candidate OR was unjailed
	int64 start_height = 2 [(gogoproto.jsontag) = "start_height", (gogoproto.moretags) = "yaml:\"start_height\""];
	// index offset into signed block bit array
	int64 Index = 3 [(gogoproto.jsontag) = "index_offset", (gogoproto.moretags) = "yaml:\"index_offset\""];
	// timestamp validator cannot be unjailed until
	google.protobuf.Timestamp jailed_until = 4 [(gogoproto.jsontag) = "jailed_until", (gogoproto.moretags) = "yaml:\"jailed_until\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = false];
	// missed blocks counter (to avoid scanning the array every time)
	int64 missed_blocks_counter = 5 [(gogoproto.jsontag) = "missed_blocks_counter", (gogoproto.moretags) = "yaml:\"missed_blocks_counter\""];
	int64 jailed_blocks_counter = 6 [(gogoproto.jsontag) = "jailed_blocks_counter", (gogoproto.moretags) = "yaml:\"jailed_blocks_counter\""];
}
// ValidatorSigningInfo defines the signing info for a validator
//message Params {
//	option (gogoproto.goproto_stringer) = false;
//	int64 RelaysToTokensMultiplier = 1 [(gogoproto.jsontag) = "relays_to_tokens_multiplier", (gogoproto.moretags) = "yaml:\"relays_to_tokens_multiplier\""];
//	int64 UnstakingTime = 2 [(gogoproto.casttype) = "time.Duration",(gogoproto.jsontag) = "unstaking_time", (gogoproto.moretags) = "yaml:\"unstaking_time\""];
//	int64 MaxValidators = 3 [(gogoproto.jsontag) = "max_validators", (gogoproto.moretags) = "yaml:\"max_validators\""];
//	string StakeDenom = 4 [(gogoproto.jsontag) = "stake_denom", (gogoproto.moretags) = "yaml:\"stake_denom\""];
//	int64 StakeMinimum = 5 [(gogoproto.jsontag) = "stake_minimum", (gogoproto.moretags) = "yaml:\"stake_minimum\""];
//	int64 SessionBlockFrequency = 6 [(gogoproto.jsontag) = "session_block_frequency", (gogoproto.moretags) = "yaml:\"session_block_frequency\""];
//	int64 DAOAllocation = 7 [(gogoproto.jsontag) = "dao_allocation", (gogoproto.moretags) = "yaml:\"dao_allocation\""];
//	int64 ProposerAllocation = 8 [(gogoproto.jsontag) = "proposer_allocation", (gogoproto.moretags) = "yaml:\"proposer_allocation\""];
//	int64 MaximumChains = 9 [(gogoproto.jsontag) = "maximum_chains", (gogoproto.moretags) = "yaml:\"maximum_chains\""];
//	int64 MaxJailedBlocks = 10 [(gogoproto.jsontag) = "max_jailed_blocks", (gogoproto.moretags) = "yaml:\"max_jailed_blocks\""];
//	int64 MaxEvidenceAge = 11 [(gogoproto.casttype) = "time.Duration", (gogoproto.jsontag) = "max_evidence_age", (gogoproto.moretags) = "yaml:\"max_evidence_age\""];
//	int64 SignedBlocksWindow = 12 [(gogoproto.jsontag) = "signed_blocks_window", (gogoproto.moretags) = "yaml:\"signed_blocks_window\""];
//	string MinSignedPerWindow = 13 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/pokt-network/pocket-core/types.BigDec", (gogoproto.jsontag) = "min_signed_per_window", (gogoproto.moretags) = "yaml:\"min_signed_per_window\""];
//	int64 DowntimeJailDuration = 14 [(gogoproto.casttype) = "time.Duration", (gogoproto.jsontag) = "downtime_jail_duration", (gogoproto.moretags) = "yaml:\"downtime_jail_duration\""];
//	string SlashFractionDoubleSign = 15 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/pokt-network/pocket-core/types.BigDec", (gogoproto.jsontag) = "slash_fraction_double_sign", (gogoproto.moretags) = "yaml:\"slash_fraction_double_sign\""];
//	string SlashFractionDowntime = 16 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/pokt-network/pocket-core/types.BigDec", (gogoproto.jsontag) = "slash_fraction_downtime", (gogoproto.moretags) = "yaml:\"slash_fraction_downtime\""];
//}
